[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Levels/Base/BaseNight2.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Levels/Base/IslanderController.gd" type="Script" id=2]
[ext_resource path="res://scenes/Levels/Experimenter/Night2/Night2.gd" type="Script" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Night2" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Objects" parent="." index="0"]
color = Color( 0.0431373, 0.0392157, 0.0941176, 1 )

[node name="Islander" parent="Objects/Props" index="0"]
modulate = Color( 1, 1, 1, 1 )

[node name="Tree" parent="Objects/Props" index="2"]
COCONUT_DROPS = 3
BRANCH_DROPS = 0

[node name="Crab" parent="Objects/Props" index="3"]
modulate = Color( 1, 1, 1, 1 )

[node name="IslanderController" type="Node" parent="." index="3"]
script = ExtResource( 2 )

[node name="Particles2D" parent="." index="6"]
radial_accel_curve = SubResource( 1 )
[connection signal="spawn_item" from="Objects/Props/Tree" to="." method="_on_Tree_spawn_item"]
[connection signal="body_exited" from="Objects/StartingArea" to="." method="_on_StartingArea_body_exited"]
[connection signal="body_entered" from="Objects/TreeArea" to="." method="_on_TreeArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
